# azure-orbital-space-sdk-client

./: .gitignore  README.md  pyproject.toml  spacesdk-client.sln
.devcontainer/: devcontainer.json
.github/workflows/: run-integrationTests-dotnet.yaml  run-integrationTests-python.yaml  sdk-dotnet-build.yaml  spacefx-client-build.yaml  spacefx-client-dotnet-build.yaml  spacefx-client-python-build.yaml  test-spacefx-client-dotnet.yaml  test-spacefx-client-python.yaml  test-spacefx-client.yaml  test-spacesdk-client-python.yaml
spacefx/: __init__.py  _sdk_client.py  client.py  link.py  logging.py  position.py  sensor.py
spacefx/common/: Common_pb2.py
spacefx/deployment/: Deployment_pb2.py
spacefx/link/: Link_pb2.py
spacefx/position/: Position_pb2.py
spacefx/sensor/: Sensor_pb2.py
spacefx/spacefxClient/: README.md
src/: Client.cs  Usings.cs  spacesdk-client.csproj
src/HostServices/: Link.cs  Logging.cs  Position.cs  Sensor.cs
src/Utils/: Utils.cs
test/debugClient/: Program.cs  Usings.cs  appsettings.json  debugClient.csproj
test/debugClient_python/: debugClient.py
test/integrationTests/: Program.cs  TestSharedContext.cs  integrationTests.csproj
test/integrationTests/Tests/: LinkTests.cs  LogMessageTests.cs  PositionTests.cs  ProtoTests.cs  SensorTests.cs  ServicesHeardTests.cs
test/integrationTests_python/: appsettings.json  integrationTest.py
